test/expected/misc-error-65.out
cdecl> __DATE__
       ^
3,1: syntax error: "__DATE__": unexpected token ("__DATE__" is a macro)
